src/objects/Fulfillment_Order__c.object
<CustomObject>
    <description>The Fulfillment Order object houses order details for Cases requiring a fulfillment order.  The Fulfillment Order represents the ‘Shopping Cart’ of items that complete a single order related to a Case.  The design supports the ability for a case to contain multiple Fulfillment Orders.  Fulfillment Orders can be both manually fulfilled or sent via integration to the P&amp;G Hermes application.  Fulfillment Orders contain a status field to indicate status of the current order.</description>
    <fields>
        <fullName>ACR_Info__c</fullName>
        <description>For recording matching ACR info</description>
        <inlineHelpText>For recording matching ACR info</inlineHelpText>
        <label>ACR Info</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Above_Monetary_Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If &quot;True&quot; indicates creator or last user to modify has exceeded their monetary allowance.</inlineHelpText>
        <label>Above Monetary Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Shipping_Address__c</fullName>
        <label>Additional Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approve_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempt__c</fullName>
        <label>Attempt</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Comment Code</label>
        <referenceTo>Case_Comment_Code__c</referenceTo>
        <relationshipLabel>Fulfillment Orders</relationshipLabel>
        <relationshipName>Fulfillment_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Country__c</fullName>
        <formula>TEXT(Case__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Currency__c</fullName>
        <formula>Case__r.Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Product</label>
        <referenceTo>Case_Product__c</referenceTo>
        <relationshipLabel>Fulfillment Orders</relationshipLabel>
        <relationshipName>Fulfillment_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Fulfillment Orders</relationshipLabel>
        <relationshipName>Fulfillment_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cloned_From_Id__c</fullName>
        <label>Cloned From Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Case_Owner_Last_Name__c</fullName>
        <formula>Case__r.Owner:User.LastName</formula>
        <label>Conga Case Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Case_Owner__c</fullName>
        <description>Used in Conga template generation signature (Conga can&apos;t see lookup fields)</description>
        <formula>Case__r.Owner:User.FirstName</formula>
        <label>Conga Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Merge_Template_Id__c</fullName>
        <label>Conga Merge Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Solution_URL__c</fullName>
        <description>This field will be sent to Conga server for generating PDF when workflow fires.  Added queries aliases - once queries are updated the non-aliased query section can be removed.</description>
        <formula>&apos;&amp;id=&apos;+Id +
&apos;&amp;templateid=&apos;+ Conga_Merge_Template_Id__c +
&apos;&amp;OFN=&apos;+ Case__r.CaseNumber +&apos;-&apos;+TEXT(NOW()) +
&apos;&amp;defaultpdf=1&apos; +

&apos;&amp;QueryId=a0F8000000g1gXC?pv0=&apos; + Case__r.Id + 
&apos;,a0F8000000g1gXA?pv0=&apos; + Id + 
&apos;,a0F8000000g1gXB?pv0=&apos; + Contact__c + 
&apos;,a0F8000000g1gX9?pv0=&apos; + Case_Country__c + &apos;~pv1=&apos; +  SUBSTITUTE(TEXT(Case__r.Brand__c), &apos;&amp;&apos;, &apos;&apos;) + &apos;~pv2=&apos; + TEXT(Case__r.Language__c) + 

&apos;,[Case]a0F8000000g1gXC?pv0=&apos; + Case__r.Id + 
&apos;,[LineItems]a0F8000000g1gXA?pv0=&apos; + Id + 
&apos;,[Contact]a0F8000000g1gXB?pv0=&apos; + Contact__c + 
&apos;,[Header]a0F8000000g1gX9?pv0=&apos; + Case_Country__c + &apos;~pv1=&apos; + SUBSTITUTE(TEXT(Case__r.Brand__c), &apos;&amp;&apos;, &apos;&apos;) + &apos;~pv2=&apos; + TEXT(Case__r.Language__c) + 

&apos;&amp;lg4=2&apos;+/*This is the Task option*/ 

&apos;&amp;mfts0=PDF_Val__c&apos;+
&apos;&amp;mftsvalue0=true&apos; + 

&apos;&amp;mfts1=PDF_Generated__c&apos;+
&apos;&amp;mftsvalue1=true&apos; +

&apos;&amp;qmode=1&apos;</formula>
        <inlineHelpText>This field will be sent to Conga server for generating PDF when workflow fires. This is a backend field.</inlineHelpText>
        <label>Conga Solution URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Workflow_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to trigger conga workflow and automatically generate PDFs using Conga workflow concept. This is for backend purpose.</description>
        <inlineHelpText>This field is used to trigger conga workflow and automatically generate PDFs using Conga workflow concept. This is for backend purpose.</inlineHelpText>
        <label>Conga Workflow Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Center__c</fullName>
        <formula>Case__r.Contact_Center__c</formula>
        <label>Contact Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used by conga merge</description>
        <label>Contact Look Up</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fulfillment Orders</relationshipLabel>
        <relationshipName>Fulfillment_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Crisis_Country__c</fullName>
        <label>Crisis Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crisis_Situation__c</fullName>
        <label>Crisis Situation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Printed__c</fullName>
        <label>Date Printed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FF_Header__c</fullName>
        <label>FF Header</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Method__c</fullName>
        <label>Fulfillment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal</fullName>
                    <default>true</default>
                    <label>Postal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Order_c__c</fullName>
        <externalId>true</externalId>
        <label>FulfillmentOrder_c.Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fullfillment_Amount_Roll_Up__c</fullName>
        <inlineHelpText>Sums amount of Fulfillment Line Item Monetary Values</inlineHelpText>
        <label>Fullfillment Amount Roll-Up</label>
        <summarizedField>Fulfillment_Order_Line_Item__c.Amount_Currency__c</summarizedField>
        <summaryForeignKey>Fulfillment_Order_Line_Item__c.Fulfillment_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hermes_Country__c</fullName>
        <formula>CASE (Case__r.Country__c, 
&quot;Japan&quot;, &quot;Japan&quot;, 
&quot;China&quot;, &quot;China&quot;, 
&quot;Australia&quot;, &quot;Australia&quot;, 
&quot;India&quot;, &quot;India&quot;, 
&quot;Indonesia&quot;, &quot;Indonesia&quot;, 
&quot;Brazil&quot;,&quot;Brazil&quot;,
&quot;Japan&quot;, &quot;Japan&quot;, 
&quot;Korea&quot;, &quot;Korea&quot;, 
&quot;Malaysia&quot;, &quot;Malaysia&quot;, 
&quot;New Zealand&quot;, &quot;New Zealand&quot;, 
&quot;Philippines&quot;, &quot;Philippines&quot;, 
&quot;Singapore&quot;, &quot;Singapore&quot;, 
&quot;Thailand&quot;, &quot;Thailand&quot;, 
&quot;Vietnam&quot;, &quot;Vietnam&quot;, 
&quot;Australia&quot;, &quot;Australia&quot;, 
&quot;Bahrain&quot;, &quot;Bahrain&quot;, 
&quot;Belarus&quot;, &quot;Belarus&quot;, 
&quot;Belgium&quot;, &quot;Belgium&quot;, 
&quot;Croatia&quot;, &quot;Croatia&quot;, 
&quot;Czech Repubic&quot;, &quot;Czech Repubic&quot;, 
&quot;Denmark&quot;, &quot;Denmark&quot;, 
&quot;Egypt&quot;, &quot;Egypt&quot;, 
&quot;Finland&quot;, &quot;Finland&quot;, 
&quot;France&quot;, &quot;France&quot;, 
&quot;Germany&quot;, &quot;Germany&quot;, 
&quot;Greece&quot;, &quot;Greece&quot;, 
&quot;Hungary&quot;, &quot;Hungary&quot;, 
&quot;Ireland&quot;, &quot;Ireland&quot;, 
&quot;Italy&quot;, &quot;Italy&quot;, 
&quot;Korea&quot;, &quot;Korea&quot;, 
&quot;Kuwait&quot;, &quot;Kuwait&quot;, 
&quot;Malaysia&quot;, &quot;Malaysia&quot;, 
&quot;Netherlands&quot;, &quot;Netherlands&quot;, 
&quot;New Zealand&quot;, &quot;New Zealand&quot;, 
&quot;Norway&quot;, &quot;Norway&quot;, 
&quot;Oman&quot;, &quot;Oman&quot;, 
&quot;Poland&quot;, &quot;Poland&quot;, 
&quot;Portugal&quot;, &quot;Portugal&quot;, 
&quot;Qatar&quot;, &quot;Qatar&quot;, 
&quot;Russia&quot;, &quot;Russia&quot;, 
&quot;Saudi Arabia&quot;, &quot;Saudi Arabia&quot;, 
&quot;Singapore&quot;, &quot;Singapore&quot;, 
&quot;Slovakia&quot;, &quot;Slovakia&quot;, 
&quot;South Africa&quot;, &quot;South Africa&quot;, 
&quot;Spain&quot;, &quot;Spain&quot;, 
&quot;Sweden&quot;, &quot;Sweden&quot;, 
&quot;Switzerland&quot;, &quot;Switzerland&quot;, 
&quot;Turkey&quot;, &quot;Turkey&quot;, 
&quot;UAE&quot;, &quot;UAE&quot;, 
&quot;United Kingdom&quot;, &quot;United Kingdom&quot;, 
&quot;Yemen&quot;, &quot;Yemen&quot;, 
&quot;United States of America&quot;, &quot;United States of America&quot;, 
&quot;Canada&quot;, &quot;Canada&quot;, 
&quot;Argentina&quot;, &quot;Argentina&quot;, 
&quot;Bolivia&quot;, &quot;Bolivia&quot;, 
&quot;Chile&quot;, &quot;Chile&quot;, 
&quot;Colombia&quot;, &quot;Colombia&quot;, 
&quot;Mexico&quot;, &quot;Mexico&quot;, 
&quot;Peru&quot;, &quot;Peru&quot;, 
&quot;Venezuela&quot;, &quot;Venezuela&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hermes Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hermes_Integration_Message__c</fullName>
        <label>Hermes Integration Message</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hermes_Integration_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hermes Integration Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Amount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kobe_Rollup__c</fullName>
        <description>This field is used for reporting.  Where there is a Kobe FF line item, the FF Order uses this count to show within the order, there is 0, 1, 2, etc Kobe FF line item in the order</description>
        <inlineHelpText>This field is used for reporting.  Where there is a Kobe FF line item, the FF Order uses this count to show within the order, there is 0, 1, 2, etc Kobe FF line item in the order</inlineHelpText>
        <label>Kobe Rollup</label>
        <summaryFilterItems>
            <field>Fulfillment_Order_Line_Item__c.Description__c</field>
            <operation>contains</operation>
            <value>Kobe</value>
        </summaryFilterItems>
        <summaryForeignKey>Fulfillment_Order_Line_Item__c.Fulfillment_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Letter_Body__c</fullName>
        <label>Letter Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count_CH_ET__c</fullName>
        <description>Count of Fulfillment Order Line Item where the Type EQUALS CH,ET,MO,CP,CK</description>
        <label>Line Item Count (CH/ET)</label>
        <summaryFilterItems>
            <field>Fulfillment_Order_Line_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>CH,ET,MO,CP,CK</value>
        </summaryFilterItems>
        <summaryForeignKey>Fulfillment_Order_Line_Item__c.Fulfillment_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count_no_CH_ET__c</fullName>
        <label>Line Item Count (no CH / ET)</label>
        <summaryFilterItems>
            <field>Fulfillment_Order_Line_Item__c.Type__c</field>
            <operation>notEqual</operation>
            <value>CH,ET,MO,CP,CK</value>
        </summaryFilterItems>
        <summaryForeignKey>Fulfillment_Order_Line_Item__c.Fulfillment_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Locked_from_Editing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked from Editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Midnight_Local_Time__c</fullName>
        <label>Midnight Local Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Day_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Day Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Letter_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Backend field used to lock the orders which doesnt need letters</description>
        <label>No Letter Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Resent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Resent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDF_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDF_Page_Count__c</fullName>
        <label>PDF Page Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDF_Val__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Val</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing_Method__c</fullName>
        <label>Processing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Handles</fullName>
                </value>
                <value>
                    <fullName>Fulfillment House</fullName>
                    <default>true</default>
                    <label>Fulfillment House</label>
                </value>
                <value>
                    <fullName>In House</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promos_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used at back end to stop the duplicate Promotional Items</description>
        <label>Promos Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTL_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RTL Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repeater_Relation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If &quot;True&quot; indicates the fulfillment order is related to a consumer deemed a &quot;Repeater&quot;.</inlineHelpText>
        <label>Related to Repeater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Next Day</fullName>
                </value>
                <value>
                    <fullName>Signature Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCI_Rollup__c</fullName>
        <label>TCI Rollup</label>
        <summaryFilterItems>
            <field>Fulfillment_Order_Line_Item__c.Description__c</field>
            <operation>equals</operation>
            <value>TCI</value>
        </summaryFilterItems>
        <summaryForeignKey>Fulfillment_Order_Line_Item__c.Fulfillment_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Monetary_Value__c</fullName>
        <description>Total Value of All Line Items&apos; Amount &amp; Total Retail Value fields.</description>
        <label>Total Monetary Value</label>
        <summarizedField>Fulfillment_Order_Line_Item__c.Total_Monetary_Value__c</summarizedField>
        <summaryForeignKey>Fulfillment_Order_Line_Item__c.Fulfillment_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trans_Country__c</fullName>
        <label>Trans Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userfname__c</fullName>
        <description>Used to populate the User First Name in conga templates</description>
        <formula>CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>userfname</label>
        <type>Text</type>
    </fields>
    <label>Fulfillment Order</label>
    <listViews>
        <fullName>AA</fullName>
        <columns>NAME</columns>
        <columns>PDF_Generated__c</columns>
        <columns>Case_Country__c</columns>
        <columns>Date_Created__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Country__c</field>
            <operation>equals</operation>
            <value>philippines</value>
        </filters>
        <label>AA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fulfillments_in_Draft</fullName>
        <columns>NAME</columns>
        <columns>Case_Country__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Fulfillments in Draft</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vietnam</fullName>
        <columns>PDF_Generated__c</columns>
        <columns>Date_Created__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Country__c</field>
            <operation>equals</operation>
            <value>vietnam</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/12/2016 12:00 AM</value>
        </filters>
        <label>Vietnam</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>myview</fullName>
        <columns>NAME</columns>
        <columns>PDF_Generated__c</columns>
        <columns>Case_Country__c</columns>
        <columns>Date_Created__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Conga_Merge_Template_Id__c</field>
            <operation>equals</operation>
            <value>a0G8000000dHp07</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017 12:00 AM</value>
        </filters>
        <label>myview</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Fulfillment Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fulfillment_Locked</fullName>
        <active>true</active>
        <description>Checks Fulfillment Order and is set to &quot;Closed&quot;, and locks all users besides System Administrator, Global Administrator and Integration User</description>
        <errorConditionFormula>AND(Locked_from_Editing__c = true, 
NOT( $Profile.Name =&quot;Integration User&quot;), 
NOT( $Profile.Name =&quot;Global Administrator&quot;), 
NOT( $Profile.Name =&quot;System Administrator&quot;), 
OR(ISCHANGED( Approve_Amount__c ),
ISCHANGED( Trans_Country__c ),
ISCHANGED( Processing_Method__c ),
ISCHANGED( Status__c ),
ISCHANGED( Case__c ),
ISCHANGED( Fulfillment_Method__c ),
ISCHANGED( Shipping_Method__c ),
ISCHANGED( Case_Comment_Code__c ),
ISCHANGED( Case_Product__c ),
ISCHANGED( Contact__c )))</errorConditionFormula>
        <errorMessage>Fulfillment Order has been locked, no updates are allowed. Please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monetary_Threshold_Draft_to_Open</fullName>
        <active>false</active>
        <description>Verifies the user&apos;s Monetary Threshold and allow the user to set the status to Open.</description>
        <errorConditionFormula>AND(Above_Monetary_Threshold__c ,ISCHANGED( Status__c ), $User.Monetary_Threshold__c &lt; Fullfillment_Amount_Roll_Up__c)</errorConditionFormula>
        <errorMessage>This Order is above your Monetarty Threshold limit. You do not have the authority to change this order&apos;s status to Open. Please contact your manager or System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>US_Can_not_change_from_DRAFT_Repeater</fullName>
        <active>true</active>
        <description>For US Agents: Ensures that US Agent&apos;s can not change the order from Draft, if they do not have the permissions.</description>
        <errorConditionFormula>AND( ISCHANGED( Status__c ), OR(ISPICKVAL( Status__c , &quot;Open&quot;),ISPICKVAL( Status__c , &quot;Closed&quot;)), Repeater_Relation__c, $User.Country =&quot;USA&quot;, $Profile.Id=&quot;00e700000013BhS&quot; )</errorConditionFormula>
        <errorMessage>Fulfillment order is related to a repeater. You do not have sufficient privileges to update the Order from Draft to Open. Please contact your Manager or System Administrator.</errorMessage>
    </validationRules>
</CustomObject>